src/objects/Project_Event__c.object
<CustomObject>
    <fields>
        <fullName>Activity_Details_Event_Name__c</fullName>
        <description>PSA-CLD-IQVIAPSA-1226</description>
        <formula>Report__r.Activity_DetailsEvent_Name__c</formula>
        <label>Activity Details Event Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <description>PSA-CLD-IQVIAPSA-1831- Display the Client Name for Use in Email Notifications</description>
        <formula>Report__r.Account__r.Name</formula>
        <label>Client</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DLP__c</fullName>
        <description>PSA-CLD-IQVIAPSA-1226</description>
        <formula>Report__r.DLP_Reporting_Period_End__c</formula>
        <label>DLP</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Actual_Date__c</fullName>
        <description>IQVIAPSA-1217 - Event Actual Date</description>
        <inlineHelpText>Event Actual Date</inlineHelpText>
        <label>Event Actual Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Due_Date__c</fullName>
        <description>IQVIAPSA-1217 - Event Due Date</description>
        <inlineHelpText>Event Due Date</inlineHelpText>
        <label>Event Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Name__c</fullName>
        <description>IQVIAPSA-1217 - Event Name</description>
        <formula>PSA_Event__r.Event_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The Event Name (taken from the associated PSA Event)</inlineHelpText>
        <label>Event Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBU__c</fullName>
        <description>PSA-CLD-IQVIAPSA-1226</description>
        <formula>TEXT(Report__r.Global_Business_Unit_GBU__c)</formula>
        <label>GBU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LR_Project_Overview__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LR Project Overview</label>
        <referenceTo>LR_Project_Overview__c</referenceTo>
        <relationshipLabel>Project Events</relationshipLabel>
        <relationshipName>Project_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MedDRA_version_used_in_current_PSSF__c</fullName>
        <description>IQVIAPSA-MC-3202</description>
        <formula>PSSF__r.MedDRA_version_used_in_current_PSSF__c</formula>
        <label>MedDRA version used in current PSSF</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notification_Date__c</fullName>
        <description>IQVIAPSA-1217 - Notification Date</description>
        <inlineHelpText>Notification Date</inlineHelpText>
        <label>Notification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Other_Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>IQVIAPSA-1217 - Designated resource, used for email notifications</description>
        <inlineHelpText>Designated resource, used for email notifications</inlineHelpText>
        <label>Other Resource</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Project Events (Other Resource)</relationshipLabel>
        <relationshipName>Project_Events2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PSA_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>IQVIAPSA-1217 - PSA Event</description>
        <inlineHelpText>PSA Event</inlineHelpText>
        <label>PSA Event</label>
        <referenceTo>PSA_Event__c</referenceTo>
        <relationshipLabel>Project Events</relationshipLabel>
        <relationshipName>Project_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PSSF_Account__c</fullName>
        <description>IQVIAPSA-MC-3202</description>
        <formula>PSSF__r.Account__r.Name</formula>
        <label>PSSF Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSSF_Effective_Date__c</fullName>
        <description>IQVIAPSA-MC-3202</description>
        <formula>PSSF__r.PSSF_Effective_Date__c</formula>
        <label>PSSF Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PSSF_Version__c</fullName>
        <description>IQVIAPSA-MC-3202</description>
        <formula>PSSF__r.PSSF_Version__c</formula>
        <label>PSSF Version</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSSF__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>IQVIAPSA-MC-3202</description>
        <label>PSSF</label>
        <referenceTo>PSSF__c</referenceTo>
        <relationshipLabel>Project Events</relationshipLabel>
        <relationshipName>Project_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_GSO__c</fullName>
        <description>PSA-CLD-IQVIAPSA-1226</description>
        <formula>Report__r.IQVIA_Primary_GSO__r.psa_report__Resource_Name__c</formula>
        <label>Primary GSO</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_PV_Scientist__c</fullName>
        <description>PSA-CLD-IQVIAPSA-1226</description>
        <formula>Report__r.IQVIA_Primary_PV_Scientist__r.psa_report__Resource_Name__c</formula>
        <label>Primary PV Scientist</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>IQVIAPSA-1217 - Designated resource, used for email notifications</description>
        <inlineHelpText>Designated resource, used for email notifications</inlineHelpText>
        <label>Primary Resource</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Project Events</relationshipLabel>
        <relationshipName>Project_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Code__c</fullName>
        <description>PSA-CLD-IQVIAPSA-1839- Project Code formula field for email templates</description>
        <formula>Project__r.pse__Parent_Project__r.Project_Code__c</formula>
        <label>Project Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>IQVIAPSA-1217 - Project</description>
        <inlineHelpText>Project</inlineHelpText>
        <label>Project</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>pse__Proj__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>RDS_Service_Line</value>
            </filterItems>
            <infoMessage>Choose a service line project.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Project Events</relationshipLabel>
        <relationshipName>Project_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Report_Product_Name_Active_Ingredient__c</fullName>
        <description>IQVIAPSA-8021</description>
        <formula>Report__r.Product_Name_Active_Ingredient_Name__c</formula>
        <label>Report Product Name(Active Ingredient)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Record_Type__c</fullName>
        <description>PSA-CLD-IQVIAPSA-1218</description>
        <formula>Report__r.RecordType.DeveloperName</formula>
        <label>Report Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>IQVIAPSA-1217 - Aggregate Report</description>
        <inlineHelpText>Aggregate Report</inlineHelpText>
        <label>Report</label>
        <referenceTo>Aggregate_Report__c</referenceTo>
        <relationshipLabel>Project Events</relationshipLabel>
        <relationshipName>Project_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SD_Run_Due_Date__c</fullName>
        <description>IQVIAPSA-MC-4080</description>
        <formula>SD_Runs__r.SD_Run_Due_Date__c</formula>
        <label>SD Run Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SD_Run_ID__c</fullName>
        <description>IQVIAPSA-4034</description>
        <formula>SD_Runs__r.SD_Run_ID__c</formula>
        <label>SD Run ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SD_Run_Unique_ID__c</fullName>
        <formula>LEFT(SD_Runs__r.SD_Run_Unique_ID__c,3)+RIGHT(SD_Runs__r.SD_Run_Unique_ID__c,9)</formula>
        <label>SD Run Unique ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SD_Runs__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>IQVIAPSA-MC-4080</description>
        <label>SD Runs</label>
        <referenceTo>SD_Runs__c</referenceTo>
        <relationshipLabel>Project Events</relationshipLabel>
        <relationshipName>Project_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sanofi_Products__c</fullName>
        <description>PSA-CLD-IQVIAPSA-1226</description>
        <formula>Report__r.Sanofi_Products__c</formula>
        <label>Sanofi Products</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sanofi_Task_Type__c</fullName>
        <description>PSA-CLD-IQVIAPSA-1218</description>
        <formula>TEXT(Report__r.Task_Type__c)</formula>
        <label>Sanofi Task Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sd_Run_Account__c</fullName>
        <description>IQVIAPSA-MC-3202</description>
        <formula>SD_Runs__r.Account__r.Name</formula>
        <label>Sd Run Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sd_Run_Product__c</fullName>
        <description>IQVIAPSA-MC-4080</description>
        <formula>SD_Runs__r.Product__r.Name</formula>
        <label>Sd Run Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Search_Strategy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Search Strategy</label>
        <referenceTo>Search_Strategy__c</referenceTo>
        <relationshipLabel>Project Events</relationshipLabel>
        <relationshipName>Project_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Secondary_Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>IQVIAPSA-1217 - Designated resource, used for email notifications</description>
        <inlineHelpText>Designated resource, used for email notifications</inlineHelpText>
        <label>Secondary Resource</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Project Events (Secondary Resource)</relationshipLabel>
        <relationshipName>Project_Events1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Send_Missed_Due_Date_Noti_Date__c</fullName>
        <description>IQVIAPSA-4657</description>
        <formula>IF( ISBLANK(PSA_Event__r.Send_Missed_Due_Date_Noti_Offset__c) ,null, Event_Due_Date__c +  PSA_Event__r.Send_Missed_Due_Date_Noti_Offset__c  )</formula>
        <inlineHelpText>This is required only for LR Tracker to trigger send missed due date notification.</inlineHelpText>
        <label>Send Missed Due Date Noti Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Line__c</fullName>
        <description>IQVIAPSA-1217 - Related Project&apos;s Service Line</description>
        <formula>Project__r.Service_Line__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Related Project&apos;s Service Line</inlineHelpText>
        <label>Service Line</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_milestone__c</fullName>
        <description>IQVIAPSA-8021</description>
        <formula>Report__r.Service_Milestone__r.Name</formula>
        <label>Service milestone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signal_Account__c</fullName>
        <description>IQVIAPSA-MC-3202</description>
        <formula>Signal__r.Account__r.Name</formula>
        <label>Signal Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signal_Evaluation_Due_Date__c</fullName>
        <description>IQVIAPSA-MC-3202</description>
        <formula>Signal__r.Evaluation_Due_Date__c</formula>
        <label>Signal Evaluation Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Signal_ID__c</fullName>
        <description>IQVIAPSA-4034</description>
        <formula>Signal__r.Signal_ID__c</formula>
        <label>Signal ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signal_Product__c</fullName>
        <description>IQVIAPSA-MC-3202</description>
        <formula>Signal__r.Product__r.Name</formula>
        <label>Signal Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signal_Term__c</fullName>
        <description>IQVIAPSA-MC-3202</description>
        <formula>Signal__r.Signal_Term__c</formula>
        <label>Signal Term</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signal_Unique_Id__c</fullName>
        <formula>LEFT(Signal__r.Signal_Unique_ID__c,3)+RIGHT(Signal__r.Signal_Unique_ID__c,13)</formula>
        <label>Signal Unique Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signal_Validation_Due_Date__c</fullName>
        <description>IQVIAPSA-MC-3202</description>
        <formula>Signal__r.Validation_Due_Date__c</formula>
        <label>Signal Validation Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Signal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>IQVIAPSA-MC-3202</description>
        <label>Signal</label>
        <referenceTo>Signal__c</referenceTo>
        <relationshipLabel>Project Events</relationshipLabel>
        <relationshipName>Project_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stakeholder_ID__c</fullName>
        <description>IQVIAPSA-1217 - Comma separated list of IDs for all stakeholders on the event</description>
        <inlineHelpText>Comma separated list of IDs for all stakeholders on the event</inlineHelpText>
        <label>Stakeholder ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Is_Stakeholder__c</fullName>
        <description>IQVIAPSA-1217 - Checked if User ID is in list of Stakeholder IDs</description>
        <formula>CONTAINS(Stakeholder_ID__c,  $User.Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Checked if User ID is in list of Stakeholder IDs</inlineHelpText>
        <label>User Is Stakeholder</label>
        <type>Checkbox</type>
    </fields>
    <label>Project Event</label>
    <nameField>
        <displayFormat>PJE-{000000}</displayFormat>
        <label>Project Event Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>